bug/131 - Fix paddings on quick start guide ui message. bug/131 - Add spacing after accordions in JavaScript SDK getting started

--- a/themes/CarbonLDP/source/assets/styles/_scss/document.scss
+++ b/themes/CarbonLDP/source/assets/styles/_scss/document.scss
@@ -7,6 +7,7 @@ h1.category-title{
 
 .successMessage{
 	display: none;
+	padding-bottom: 10px;
 }
 
 
